@@ -70,13 +70,28 @@
           <input type="hidden" name="form.submitted" value="1" />
           <input type="hidden" name="sub" value="1" />
 
-          <tal:indices tal:define="enabledOnly python:request.get('showEnabledOnly', '0');
+          <tal:indices tal:define="enabledOnly python:request.get('showEnabledOnly',True);
                               indexes python:atct_tool.getIndexes(enabledOnly=enabledOnly);
                               metadata python:atct_tool.getAllMetadata(enabledOnly=enabledOnly)">
 
           <h3 i18n:translate="heading_metadata_fields_for_display">
               Metadata (fields for display)
           </h3>
+
+          <div style="text-align:right">
+              <a href=""
+                  i18n:translate="atct_show_enabled_fields"
+                  tal:condition="not:enabledOnly"
+                  tal:attributes="href python:here.absolute_url() +'/'+ template.id + '?showEnabledOnly:int=1'">
+                  Enabled fields only
+              </a>
+              <a href=""
+                  i18n:translate="atct_show_all_fields"
+                  tal:condition="enabledOnly"
+                  tal:attributes="href python:here.absolute_url() +'/'+ template.id + '?showEnabledOnly:int=0'">
+                  All fields
+              </a>
+          </div>
 
           <table class="listing" border="0" cellpadding="0" cellspacing="0" style=""
                  tal:define="bgcolor string:background-color:${here/base_properties/evenRowBackgroundColor};
